--- a/libft/Makefile
+++ b/libft/Makefile
@@ -91,16 +91,16 @@ $(NAME): say $(OBJ)
 	@echo "\033[32m\tDONE !\033[0m"
 
 say:
-	@echo "\033[33m\t'.' == One file is compiled\t\033[0m"
-	@echo "\033[33m\t' ' == make: Nothing to be done for 'all'\t\033[0m"
-	@echo "\033[32m\tLibft compilation progress\t\c\033[0m"
+	@echo "\033[33m  '.' == One file is compiled\t\033[0m"
+	@echo "\033[33m  ' ' == make: Nothing to be done for 'all'\t\033[0m"
+	@echo "\033[32m  Libft compilation progress\t\c\033[0m"
 
 clean:
 	@rm -f $(OBJ)
-	@echo "\033[32m\tRemove all objects from the Libft\tDONE !\033[0m"
+	@echo "\033[32m  Remove all objects from the Libft\tDONE !\033[0m"
 
 fclean: clean
 	@rm -f $(NAME)
-	@echo "\033[32m\tRemove libft.a\t\t\t\tDONE !\033[0m"
+	@echo "\033[32m  Remove libft.a\t\t\t\tDONE !\033[0m"
 
 re: fclean all
